Add typeMismatch messages

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -60,10 +60,12 @@ videoCreation.probe.error=Unable to analyze video. Please try again.
 
 videoCreationCommand.title.blank=[title] cannot be null
 videoCreationCommand.title.nullable=[title] is required
+typeMismatch.in.reeltime.video.VideoCreationCommand.title=[title] is invalid
 
 videoCreationCommand.reel.blank=[reel] cannot be null
 videoCreationCommand.reel.nullable=[reel] is required
 videoCreationCommand.reel.unknown=[reel] is unknown
+typeMismatch.in.reeltime.video.VideoCreationCommand.reel=[reel] is invalid
 
 videoCreationCommand.videoStream.nullable=[video] is required
 
@@ -89,12 +91,14 @@ registration.internal.error=Unable to register. Please try again.
 # Account confirmation errors
 accountConfirmationCommand.code.blank=[code] cannot be blank
 accountConfirmationCommand.code.nullable=[code] is required
+typeMismatch.in.reeltime.account.AccountConfirmationCommand.code=[code] is invalid
 
 # Account registration errors
 accountRegistrationCommand.email.blank=[email] cannot be blank
 accountRegistrationCommand.email.nullable=[email] is required
 
 accountRegistrationCommand.email.email.invalid=[email] is not a valid e-mail address
+typeMismatch.in.reeltime.account.AccountRegistrationCommand.email=[email] is invalid
 
 accountRegistrationCommand.username.blank=[username] cannot be blank
 accountRegistrationCommand.username.nullable=[username] is required
@@ -102,36 +106,44 @@ accountRegistrationCommand.username.nullable=[username] is required
 accountRegistrationCommand.username.unavailable=[username] is not available
 accountRegistrationCommand.username.matches.invalid=[username] must be 2-15 alphanumeric characters long
 
+typeMismatch.in.reeltime.account.AccountRegistrationCommand.username=[username] is invalid
+
 accountRegistrationCommand.password.blank=[password] cannot be blank
 accountRegistrationCommand.password.nullable=[password] is required
 
 accountRegistrationCommand.password.minSize.notmet=[password] must be at least 6 characters long
+typeMismatch.in.reeltime.account.AccountRegistrationCommand.password=[password] is invalid
 
 accountRegistrationCommand.display_name.blank=[display_name] cannot be blank
 accountRegistrationCommand.display_name.nullable=[display_name] is required
 
 accountRegistrationCommand.display_name.matches.invalid=[display_name] must be 2-20 alphanumeric or space characters long
+typeMismatch.in.reeltime.account.AccountRegistrationCommand.display_name=[display_name] is invalid
 
 accountRegistrationCommand.client_name.blank=[client_name] cannot be blank
 accountRegistrationCommand.client_name.nullable=[client_name] is required
+typeMismatch.in.reeltime.account.AccountRegistrationCommand.client_name=[client_name] is invalid
 
 # Reset password email
 account.password.reset.email.subject=ReelTime Password Reset
 account.password.reset.email.message=Hello {0}, please enter the following code when prompted to reset your password: {1}
-account.reset.password.email.username.required=[username] is required
 
 # Reset password errors
 resetPasswordCommand.username.blank=[username] cannot be blank
 resetPasswordCommand.username.nullable=[username] is required
+typeMismatch.in.reeltime.account.ResetPasswordCommand.username=[username] is invalid
 
 resetPasswordCommand.new_password.blank=[new_password] cannot be blank
 resetPasswordCommand.new_password.nullable=[new_password] is required
 resetPasswordCommand.new_password.minSize.notmet=[new_password] must be at least 6 characters long
+typeMismatch.in.reeltime.account.ResetPasswordCommand.new_password=[new_password] is invalid
 
 resetPasswordCommand.code.blank=[code] cannot be blank
 resetPasswordCommand.code.nullable=[code] is required
+typeMismatch.in.reeltime.account.ResetPasswordCommand.code=[code] is invalid
 
 resetPasswordCommand.client_is_registered.nullable=[client_is_registered] is required
+typeMismatch.in.reeltime.account.ResetPasswordCommand.client_is_registered=[client_is_registered] is invalid
 
 resetPasswordCommand.client_id.blank=[client_id] cannot be blank
 resetPasswordCommand.client_id.nullable=[client_id] is required
@@ -139,37 +151,47 @@ resetPasswordCommand.client_id.nullable=[client_id] is required
 resetPasswordCommand.client_id.unauthenticated=Invalid credentials
 resetPasswordCommand.client_id.unauthorized=Forbidden request
 
+typeMismatch.in.reeltime.account.ResetPasswordCommand.client_id=[client_id] is invalid
+
 resetPasswordCommand.client_secret.blank=[client_secret] cannot be blank
 resetPasswordCommand.client_secret.nullable=[client_secret] is required
+typeMismatch.in.reeltime.account.ResetPasswordCommand.client_secret=[client_secret] is invalid
 
 resetPasswordCommand.client_name.blank=[client_name] cannot be blank
 resetPasswordCommand.client_name.nullable=[client_name] is required
+typeMismatch.in.reeltime.account.ResetPasswordCommand.client_name=[client_name] is invalid
 
 # Change password errors
 changePasswordCommand.new_password.blank=[new_password] cannot be blank
 changePasswordCommand.new_password.nullable=[new_password] is required
 changePasswordCommand.new_password.minSize.notmet=[new_password] must be at least 6 characters long
+typeMismatch.in.reeltime.account.ChangePasswordCommand.new_password=[new_password] is invalid
 
 # Change display name errors
 changeDisplayNameCommand.new_display_name.blank=[new_display_name] cannot be blank
 changeDisplayNameCommand.new_display_name.nullable=[new_display_name] is required
 changeDisplayNameCommand.new_display_name.matches.invalid=[new_display_name] must be 2-20 alphanumeric or space characters long
+typeMismatch.in.reeltime.account.ChangeDisplayNameCommand.new_display_name=[new_display_name] is invalid
 
 # Revoke client errors
 revokeClientCommand.client_id.blank=[client_id] cannot be blank
 revokeClientCommand.client_id.nullable=[client_id] is required
+typeMismatch.in.reeltime.account.RevokeClientCommand.client_id=[client_id] is invalid
 
 # Client registration errors
 clientRegistrationCommand.username.blank=[username] cannot be blank
 clientRegistrationCommand.username.nullable=[username] is required
 
 clientRegistrationCommand.username.unauthenticated=Invalid credentials
+typeMismatch.in.reeltime.account.ClientRegistrationCommand.username=[username] is invalid
 
 clientRegistrationCommand.password.blank=[password] cannot be blank
 clientRegistrationCommand.password.nullable=[password] is required
+typeMismatch.in.reeltime.account.ClientRegistrationCommand.password=[password] is invalid
 
 clientRegistrationCommand.client_name.blank=[client_name] cannot be blank
 clientRegistrationCommand.client_name.nullable=[client_name] is required
+typeMismatch.in.reeltime.account.ClientRegistrationCommand.client_name=[client_name] is invalid
 
 # Resource not found errors
 reel.unknown=Requested reel was not found
@@ -182,6 +204,8 @@ addReelCommand.name.blank=[name] cannot be blank
 
 addReelCommand.name.minSize.notmet=[name] must be at least 5 characters long
 addReelCommand.name.maxSize.exceeded=[name] must be no more than 25 characters long
+
+typeMismatch.in.reeltime.reel.AddReelCommand.name=[name] is invalid
 
 addReel.name.invalid=Requested reel name is not allowed
 
@@ -199,6 +223,7 @@ following.invalid.request=Invalid following operation requested
 # Username errors
 usernameCommand.username.blank=[username] cannot be blank
 usernameCommand.username.nullable=[username] is required
+typeMismatch.in.reeltime.user.UsernameCommand.username=[username] is invalid
 
 # Search errors
 searchCommand.type.blank=[type] cannot be blank
