Snake case UrlMappings and reelId

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -210,8 +210,8 @@ typeMismatch.in.reeltime.reel.AddReelCommand.name=[name] is invalid
 addReel.name.invalid=Requested reel name is not allowed
 
 # Reel errors
-reelCommand.reelId.nullable=[reelId] is required
-typeMismatch.in.reeltime.reel.ReelCommand.reelId=[reelId] is invalid
+reelCommand.reel_id.nullable=[reel_id] is required
+typeMismatch.in.reeltime.reel.ReelCommand.reel_id=[reel_id] is invalid
 
 # Video errors
 videoCommand.videoId.nullable=[videoId] is required
