Snake case videoId

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -214,8 +214,8 @@ reelCommand.reel_id.nullable=[reel_id] is required
 typeMismatch.in.reeltime.reel.ReelCommand.reel_id=[reel_id] is invalid
 
 # Video errors
-videoCommand.videoId.nullable=[videoId] is required
-typeMismatch.in.reeltime.video.VideoCommand.videoId=[videoId] is invalid
+videoCommand.video_id.nullable=[video_id] is required
+typeMismatch.in.reeltime.video.VideoCommand.video_id=[video_id] is invalid
 
 # User following errors
 following.invalid.request=Invalid following operation requested
