--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -217,6 +217,14 @@ typeMismatch.in.reeltime.reel.ReelCommand.reel_id=[reel_id] is invalid
 videoCommand.video_id.nullable=[video_id] is required
 typeMismatch.in.reeltime.video.VideoCommand.video_id=[video_id] is invalid
 
+# Playlist errors
+playlistCommand.playlist_id.nullable=[playlist_id] is required
+typeMismatch.in.reeltime.playlist.PlaylistCommand.playlist_id=[playlist_id] is invalid
+
+# Segment errors
+segmentCommand.segment_id.nullable=[segment_id] is required
+typeMismatch.in.reeltime.playlist.SegmentCommand.segment_id=[segment_id] is invalid
+
 # User following errors
 following.invalid.request=Invalid following operation requested
 
