Refactor reel removal logic to its own service

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -205,6 +205,8 @@ addReelCommand.name.blank=[name] cannot be blank
 addReelCommand.name.minSize.notmet=[name] must be at least 5 characters long
 addReelCommand.name.maxSize.exceeded=[name] must be no more than 25 characters long
 
+addReelCommand.name.reserved=[name] is reserved
+
 typeMismatch.in.reeltime.reel.AddReelCommand.name=[name] is invalid
 
 addReel.name.invalid=Requested reel name is not allowed
