--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -93,6 +93,8 @@ accountConfirmationCommand.code.blank=[code] cannot be blank
 accountConfirmationCommand.code.nullable=[code] is required
 typeMismatch.in.reeltime.account.AccountConfirmationCommand.code=[code] is invalid
 
+accountConfirmationEmail.internal.error=Unable to send account confirmation email. Please try again.
+
 # Account registration errors
 accountRegistrationCommand.email.blank=[email] cannot be blank
 accountRegistrationCommand.email.nullable=[email] is required
@@ -160,6 +162,8 @@ typeMismatch.in.reeltime.account.ResetPasswordCommand.client_secret=[client_secr
 resetPasswordCommand.client_name.blank=[client_name] cannot be blank
 resetPasswordCommand.client_name.nullable=[client_name] is required
 typeMismatch.in.reeltime.account.ResetPasswordCommand.client_name=[client_name] is invalid
+
+resetPasswordEmail.internal.error=Unable to send reset password email. Please try again.
 
 # Change password errors
 changePasswordCommand.new_password.blank=[new_password] cannot be blank
