Include error message for Forbidden responses

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -251,3 +251,6 @@ searchCommand.query.nullable=[query] is required
 pagedListCommand.page.nullable=[page] must be a positive number or be omitted
 pagedListCommand.page.min.notmet=[page] must be a positive number
 typeMismatch.in.reeltime.search.PagedListCommand.page=[page] is invalid
+
+# Authorization errors
+request.forbidden=Unauthorized operation requested
