Add functional test for token revocation

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -179,6 +179,12 @@ changeDisplayNameCommand.new_display_name.nullable=[new_display_name] is require
 changeDisplayNameCommand.new_display_name.matches.invalid=[new_display_name] must be 2-20 alphanumeric or space characters long
 typeMismatch.in.reeltime.account.ChangeDisplayNameCommand.new_display_name=[new_display_name] is invalid
 
+# Token errors
+accessTokenCommand.access_token.blank=[access_token] cannot be blank
+accessTokenCommand.access_token.nullable=[access_token] is required
+
+typeMismatch.in.reeltime.oauth2.AccessTokenCommand.access_token=[access_token] is invalid
+
 # Revoke client errors
 revokeClientCommand.client_id.blank=[client_id] cannot be blank
 revokeClientCommand.client_id.nullable=[client_id] is required
