Fix functional tests and report invalid thumbnail format

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -67,6 +67,9 @@ videoCreationCommand.reel.nullable=[reel] is required
 videoCreationCommand.reel.unknown=[reel] is unknown
 typeMismatch.in.reeltime.video.VideoCreationCommand.reel=[reel] is invalid
 
+videoCreationCommand.thumbnailStream.nullable=[thumbnail] is required
+videoCreationCommand.thumbnailFormatIsValid.format=[thumbnail] must be png format
+
 videoCreationCommand.videoStream.nullable=[video] is required
 
 videoCreationCommand.h264StreamIsPresent.missing=[video] must contain an h264 video stream
