Add ThumbnailController and URL mapping

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -212,6 +212,7 @@ typeMismatch.in.reeltime.account.ClientRegistrationCommand.client_name=[client_n
 reel.unknown=Requested reel was not found
 user.unknown=Requested user was not found
 video.unknown=Requested video was not found
+thumbnail.unknown=Requested thumbnail was not found
 
 # Add reel errors
 addReelCommand.name.nullable=[name] is required
