Add functional tests for thumbnail retrieval

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -235,6 +235,13 @@ typeMismatch.in.reeltime.reel.ReelCommand.reel_id=[reel_id] is invalid
 videoCommand.video_id.nullable=[video_id] is required
 typeMismatch.in.reeltime.video.VideoCommand.video_id=[video_id] is invalid
 
+# Thumbnail errors
+thumbnailCommand.resolution.nullable=[resolution] is required
+thumbnailCommand.resolution.blank=[resolution] cannot be blank
+
+thumbnailCommand.resolution.not.inList=[resolution] must be small, medium or large
+typeMismatch.in.reeltime.thumbnail.ThumbnailCommand.resolution=[resolution] is invalid
+
 # Playlist errors
 playlistCommand.playlist_id.nullable=[playlist_id] is required
 typeMismatch.in.reeltime.playlist.PlaylistCommand.playlist_id=[playlist_id] is invalid
