Restrict max size of thumbnail

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -68,7 +68,12 @@ videoCreationCommand.reel.unknown=[reel] is unknown
 typeMismatch.in.reeltime.video.VideoCreationCommand.reel=[reel] is invalid
 
 videoCreationCommand.thumbnailStream.nullable=[thumbnail] is required
+
 videoCreationCommand.thumbnailFormatIsValid.format=[thumbnail] must be png format
+videoCreationCommand.thumbnailFormatIsValid.invalid=[thumbnail] format is invalid
+
+videoCreationCommand.thumbnailStreamSizeIsValid.exceedsMax=[thumbnail] exceeds max size
+videoCreationCommand.thumbnailStreamSizeIsValid.invalid=[thumbnail] size is invalid
 
 videoCreationCommand.videoStream.nullable=[video] is required
 
