Enforce client name uniqueness per user

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -211,6 +211,8 @@ typeMismatch.in.reeltime.account.ClientRegistrationCommand.password=[password] i
 
 clientRegistrationCommand.client_name.blank=[client_name] cannot be blank
 clientRegistrationCommand.client_name.nullable=[client_name] is required
+
+clientRegistrationCommand.client_name.unavailable=[client_name] is not available
 typeMismatch.in.reeltime.account.ClientRegistrationCommand.client_name=[client_name] is invalid
 
 # Resource not found errors
