--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -174,6 +174,7 @@ resetPasswordCommand.client_name.nullable=[client_name] is required
 typeMismatch.in.reeltime.account.ResetPasswordCommand.client_name=[client_name] is invalid
 
 resetPasswordEmail.internal.error=Unable to send reset password email. Please try again.
+resetPassword.code.invalid=[code] is invalid
 
 # Change password errors
 changePasswordCommand.new_password.blank=[new_password] cannot be blank
