Make message property names consistent

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -139,6 +139,7 @@ typeMismatch.in.reeltime.account.AccountRegistrationCommand.client_name=[client_
 # Reset password email
 account.password.reset.email.subject=ReelTime Password Reset
 account.password.reset.email.message=Hello {0}, please enter the following code when prompted to reset your password: {1}
+account.password.reset.email.internal.error=Unable to send reset password email. Please try again.
 
 # Reset password errors
 resetPasswordCommand.username.blank=[username] cannot be blank
@@ -173,8 +174,7 @@ resetPasswordCommand.client_name.blank=[client_name] cannot be blank
 resetPasswordCommand.client_name.nullable=[client_name] is required
 typeMismatch.in.reeltime.account.ResetPasswordCommand.client_name=[client_name] is invalid
 
-resetPasswordEmail.internal.error=Unable to send reset password email. Please try again.
-resetPassword.code.invalid=[code] is invalid
+account.password.reset.code.invalid=[code] is invalid
 
 # Change password errors
 changePasswordCommand.new_password.blank=[new_password] cannot be blank
