Treat confirmation codes as invalid errors as well

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -101,7 +101,8 @@ accountConfirmationCommand.code.blank=[code] cannot be blank
 accountConfirmationCommand.code.nullable=[code] is required
 typeMismatch.in.reeltime.account.AccountConfirmationCommand.code=[code] is invalid
 
-accountConfirmationEmail.internal.error=Unable to send account confirmation email. Please try again.
+account.confirmation.email.internal.error=Unable to send account confirmation email. Please try again.
+account.confirmation.code.invalid=[code] is invalid
 
 # Account registration errors
 accountRegistrationCommand.email.blank=[email] cannot be blank
