Throw ClientNotFoundException instead of AuthorizationException if revoking unknown client

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -218,6 +218,7 @@ clientRegistrationCommand.client_name.unavailable=[client_name] is not available
 typeMismatch.in.reeltime.account.ClientRegistrationCommand.client_name=[client_name] is invalid
 
 # Resource not found errors
+client.unknown=Requested client was not found
 reel.unknown=Requested reel was not found
 user.unknown=Requested user was not found
 video.unknown=Requested video was not found
