Catch and handle MailServerNotFoundException

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -223,6 +223,7 @@ reel.unknown=Requested reel was not found
 user.unknown=Requested user was not found
 video.unknown=Requested video was not found
 thumbnail.unknown=Requested thumbnail was not found
+mailServer.unknown=Mail server is unknown
 
 # Add reel errors
 addReelCommand.name.nullable=[name] is required
